
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {scalar_t__ setenv; } ;
typedef TYPE_1__ vudo_t ;


 scalar_t__ IFCONF_BUF ;
 int MAXSYSLOGLEN ;
 scalar_t__ SIZE_SZ ;
 scalar_t__ SUDOERS_FP ;
 scalar_t__ VASPRINTF ;
 int strlen (char*) ;

size_t
vudo_msg( vudo_t * p_v )
{
    size_t msg;

    msg = ( MAXSYSLOGLEN + 1 ) - strlen( "shell " ) + 3;
    msg *= sizeof(char *);
    msg += SIZE_SZ - IFCONF_BUF + p_v->setenv + SUDOERS_FP + VASPRINTF;
    msg /= sizeof(char *) + 1;

    return( msg );
}
