; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_20901.c_vudo_msg.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_20901.c_vudo_msg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@MAXSYSLOGLEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"shell \00", align 1
@SIZE_SZ = common dso_local global i64 0, align 8
@IFCONF_BUF = common dso_local global i64 0, align 8
@SUDOERS_FP = common dso_local global i64 0, align 8
@VASPRINTF = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @vudo_msg(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load i32, i32* @MAXSYSLOGLEN, align 4
  %5 = add nsw i32 %4, 1
  %6 = call i32 @strlen(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %7 = sub nsw i32 %5, %6
  %8 = add nsw i32 %7, 3
  %9 = sext i32 %8 to i64
  store i64 %9, i64* %3, align 8
  %10 = load i64, i64* %3, align 8
  %11 = mul i64 %10, 8
  store i64 %11, i64* %3, align 8
  %12 = load i64, i64* @SIZE_SZ, align 8
  %13 = load i64, i64* @IFCONF_BUF, align 8
  %14 = sub nsw i64 %12, %13
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = add nsw i64 %14, %17
  %19 = load i64, i64* @SUDOERS_FP, align 8
  %20 = add nsw i64 %18, %19
  %21 = load i64, i64* @VASPRINTF, align 8
  %22 = add nsw i64 %20, %21
  %23 = load i64, i64* %3, align 8
  %24 = add i64 %23, %22
  store i64 %24, i64* %3, align 8
  %25 = load i64, i64* %3, align 8
  %26 = udiv i64 %25, 9
  store i64 %26, i64* %3, align 8
  %27 = load i64, i64* %3, align 8
  ret i64 %27
}

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
